[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Code/Scripts/Electricity/ElectricitySplitter.gd" type="Script" id=1]
[ext_resource path="res://Assets/Code/Scenes/Electricity/EnergyRadius.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Graphics/Towers/ElectricitySplitter/Fire_Rate_Torus_On_03.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/Towers/ElectricitySplitter/Fire_Rate_Torus_On_02.png" type="Texture" id=4]
[ext_resource path="res://Assets/Graphics/Towers/ElectricitySplitter/Fire_Rate_Pylon_Off.png" type="Texture" id=5]
[ext_resource path="res://Assets/Graphics/Towers/ElectricitySplitter/Fire_Rate_Torus_On_01.png" type="Texture" id=6]
[ext_resource path="res://Assets/Graphics/Towers/ElectricitySplitter/Fire_Rate_Torus_Off_01.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fonts/minimal3x5.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 8 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[node name="ElectricitySplitter" type="Node2D" groups=[
"building",
"electricity",
]]
script = ExtResource( 1 )

[node name="EnergyHUD" type="Label" parent="."]
visible = false
margin_left = -20.0
margin_top = -12.0
margin_right = 20.0
custom_fonts/font = SubResource( 1 )
text = "Juice"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Socket" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 5 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Texture" type="AnimatedSprite" parent="."]
position = Vector2( 8, 4 )
z_index = 3
frames = SubResource( 2 )
animation = "off"
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="EnergyRadius" parent="." instance=ExtResource( 2 )]
position = Vector2( 8, 11 )

[node name="Hitbox" type="TextureRect" parent="."]
margin_left = -4.0
margin_top = -2.0
margin_right = 20.0
margin_bottom = 33.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Hitbox" to="." method="_on_Hitbox_mouse_entered"]
[connection signal="mouse_exited" from="Hitbox" to="." method="_on_Hitbox_mouse_exited"]
